Bug 68902 - Fix ENABLE(SQL_DATABASE)=0 build after r95919
Summary: Fix ENABLE(SQL_DATABASE)=0 build after r95919
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P1 Blocker
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 68767
  Show dependency treegraph
 
Reported: 2011-09-27 07:27 PDT by Csaba Osztrogonác
Modified: 2011-09-27 10:05 PDT (History)
5 users (show)

See Also:


Attachments
proposed fix (4.15 KB, patch)
2011-09-27 07:51 PDT, Csaba Osztrogonác
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Osztrogonác 2011-09-27 07:27:06 PDT
See https://bugs.webkit.org/show_bug.cgi?id=68767 for details
Patch is coming soon.
Comment 1 Csaba Osztrogonác 2011-09-27 07:51:37 PDT
Created attachment 108848 [details]
proposed fix
Comment 2 Csaba Osztrogonác 2011-09-27 08:04:00 PDT
It is P1 blocker bug, because of it Qt Linux Release minimal core builder is red.
Comment 3 Tor Arne Vestbø 2011-09-27 08:07:57 PDT
How does this relate to the ENABLE_SQLITE that we have in our WebCore.pro?
Comment 4 Csaba Osztrogonác 2011-09-27 08:17:18 PDT
(In reply to comment #3)
> How does this relate to the ENABLE_SQLITE that we have in our WebCore.pro?

ENABLE_SQLITE is always true after r95919. So we can remove ENABLE_SQLITE 
guards from our project files, because it is mandatory now.
Comment 5 WebKit Review Bot 2011-09-27 10:05:33 PDT
Comment on attachment 108848 [details]
proposed fix

Clearing flags on attachment: 108848

Committed r96123: <http://trac.webkit.org/changeset/96123>
Comment 6 WebKit Review Bot 2011-09-27 10:05:37 PDT
All reviewed patches have been landed.  Closing bug.