third_party/WebKit/Source/WebCore/platform/sql/SQLiteAuthorizer.cpp
@@ -30,8 +30,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "DatabaseAuthorizer.h"
 
-#if ENABLE(SQL_DATABASE)
-
 #include <sqlite3.h>
 
 namespace WebCore {
@@ -41,5 +39,3 @@ const int SQLAuthIgnore = SQLITE_IGNORE;
 const int SQLAuthDeny = SQLITE_DENY;
 
 } // namespace WebCore
-
-#endif // ENABLE(SQL_DATABASE)
