third_party/WebKit/Source/WebCore/platform/sql/SQLiteDatabase.cpp
@@ -28,8 +28,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "SQLiteDatabase.h"
 
-#if ENABLE(SQL_DATABASE)
-
 #include "DatabaseAuthorizer.h"
 #include "Logging.h"
 #include "SQLiteFileSystem.h"
@@ -472,5 +470,3 @@ bool SQLiteDatabase::turnOnIncrementalAutoVacuum()
 }
 
 } // namespace WebCore
-
-#endif // ENABLE(SQL_DATABASE)
