third_party/WebKit/Source/WebCore/platform/sql/SQLiteFileSystem.cpp
@@ -33,8 +33,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "SQLiteFileSystem.h"
 
-#if ENABLE(SQL_DATABASE)
-
 #include "FileSystem.h"
 #include "SQLiteDatabase.h"
 #include "SQLiteStatement.h"
@@ -126,5 +124,3 @@ long long SQLiteFileSystem::getDatabaseFileSize(const String& fileName)
 }
 
 } // namespace WebCore
-
-#endif // ENABLE(SQL_DATABASE)
