third_party/WebKit/Source/WebCore/platform/sql/SQLiteStatement.cpp
@@ -27,8 +27,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "SQLiteStatement.h"
 
-#if ENABLE(SQL_DATABASE)
-
 #include "Logging.h"
 #include "SQLValue.h"
 #include <sqlite3.h>
@@ -546,5 +544,3 @@ bool SQLiteStatement::isExpired()
 }
 
 } // namespace WebCore
-
-#endif // ENABLE(SQL_DATABASE)
