third_party/WebKit/Source/WebCore/platform/sql/SQLiteTransaction.cpp
@@ -27,8 +27,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "SQLiteTransaction.h"
 
-#if ENABLE(SQL_DATABASE)
-
 #include "SQLiteDatabase.h"
 
 namespace WebCore {
@@ -104,5 +102,3 @@ bool SQLiteTransaction::wasRolledBackBySqlite() const
 }
 
 } // namespace WebCore
-
-#endif // ENABLE(SQL_DATABASE)
