third_party/WebKit/Source/WebCore/storage/DatabaseAuthorizer.cpp
@@ -30,8 +30,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "DatabaseAuthorizer.h"
 
-#if ENABLE(SQL_DATABASE)
-
 #include "PlatformString.h"
 #include <wtf/PassRefPtr.h>
 
@@ -435,5 +433,3 @@ int DatabaseAuthorizer::updateDeletesBasedOnTableName(const String& tableName)
 }
 
 } // namespace WebCore
-
-#endif
